# sidetrack

./: .gitignore  CHANGES.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SUPPORT.md  codemeta.json  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml
dev/icon/: README.md
sidetrack/: __init__.py  __version__.py  debug.py  logger.py
tests/: demo_debug.py
