# =============================================================================
# @file    setup.cfg
# @brief   Package metadata.
# @author  Michael Hucka <mhucka@caltech.edu>
# @license Please see the file named LICENSE in the project directory
# @website https://github.com/caltechlibrary/sidetrack
# =============================================================================

[metadata]
name             = sidetrack
version          = 1.3.0
description      = Simple debug tracing package for Python
author           = Michael Hucka
author_email     = mhucka@caltech.edu
license          = BSD 3-clause
license_files    = LICENSE
url              = https://github.com/caltechlibrary/sidetrack
# The remaining items below are used by PyPI.
project_urls     =
  Source Code    = https://github.com/caltechlibrary/sidetrack
  Bug Tracker    = https://github.com/caltechlibrary/sidetrack/issues
keywords         = debugging
classifiers      =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  License :: OSI Approved :: BSD License
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Programming Language :: Python
  Programming Language :: Python :: 3.6
  Topic :: Software Development :: Debuggers
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = True
python_requires = >= 3.6
